# ax2009-html-report-flattener

./: .gitignore  LICENSE  README.md  build_exe.ps1  build_gui_launcher.py  pyproject.toml  version_info.txt
src/ax2009_html_report_flattener/: __init__.py  cli.py  flattener.py  gui.py  html_parser.py  logging_utils.py  number_parser.py  xlsx_writer.py
tests/: test_flattener_inventory.py  test_flattener_trial_balance.py  test_flattener_vendor_transactions.py  test_number_parser.py
tests/fixtures/: gl_trial_balance.html  inventory_group.html  inventory_warehouse.html  vendor_transactions.html  vendor_trial_balance.html
