[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ax2009-html-report-flattener"
version = "0.1.0"
description = "Convert Dynamics AX 2009-style HTML report exports into flat XLSX tables."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
ax2009-html-report-flattener = "ax2009_html_report_flattener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
